[package]
name = "cfl_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.5"
serde_json = "1.0.117"

shared_types = { git = "https://github.com/tudsat-rocket/sam" }
# Wouldn't compile earlier without this, now it works..?
# state_estimator = { git = "https://github.com/tudsat-rocket/sam" }
